# FastApi-Best-Science-blog

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  DockerfileTesting  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: checks.yaml
app/core/: config.py  database.py
app/models/: __init__.py  article.py  author.py  base.py  comment.py
app/repositories/: article_repository.py  author_repository.py  comment_repository.py
migration/: env.py
migration/versions/: 090ccbfa82d7_created_db_and_author_model.py  104b30fe8b03_create_model.py  449e3057ff27_update_models1.py  48c8f81a2d5b_fix_relation.py  52c7b5bac496_created_models.py  9ccf8aafaed0_created_models.py  bddac8d0adf1_fix_migration_after_start_using_sqlach_v2.py  d87fb0c31340_rename_tables.py  e29cbc8272f9_fix_comment_and_article_relation.py
repositories/: author_repository.py  base.py
src/: main.py
src/article/: models.py
src/author/: models.py
src/comment/: models.py
src/database/: database.py
tests/: conftest.py
tests/test_models/: conftest.py  test_article.py  test_author.py  test_comment.py  test_model.py
