[tool.pytest.ini_options]
pythonpath = [".", "src",
]
asyncio_mode="auto"
[tool.poetry]
name = "poetry  shell"
version = "0.1.0"
description = ""
authors = ["arioh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.1"}
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
black = "^23.9.1"
pre-commit = "^3.4.0"
flake8 = "^6.1.0"
pydantic-settings = "^2.0.3"
docker = "^6.1.3"
pyyaml = "5.3.1"
docker-compose = "^1.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
